# omni-flow

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  build.gradle.kts  gradlew  gradlew.bat  package.json  pnpm-lock.yaml  progress.md  settings.gradle.kts  sidestore-source.json
.github/: release_with_macos_x64.yml
.github/workflows/: release.yml
androidApp/: build.gradle.kts
appleApp/OmniFlow.xcodeproj/: project.pbxproj
appleApp/Widget/: OmniFlowWidget.entitlements  QuickBookkeepingWidget.swift
appleApp/iOS/: Info.plist  OmniFlow.entitlements
appleApp/macOS/: Info.plist  OmniFlow.entitlements
assets/icons/: README.md
docs/: 1.Requirements.md  2.Architecture.md  3.TechDesign.md  4.Goal.md  Goal.md  Requirements.md  progress.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
script/: build_and_run.sh
shared/: build.gradle.kts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_add_properties.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/adapters/: aes_crypto.rs  mod.rs  sqlite_store.rs
src-tauri/src/commands/: category.rs  data.rs  mod.rs  stats.rs  sync.rs
src-tauri/src/core/: dedup_engine.rs  mod.rs  rule_engine.rs  stats_engine.rs  sync_engine.rs
src-tauri/src/core/parsers/: alipay.rs  ccb.rs  jd.rs  meituan.rs  mod.rs  qingzi.rs  wechat.rs
src-tauri/src/models/: mod.rs
src-tauri/src/ports/: crypto.rs  mod.rs  storage.rs
src/store/: useSettingsStore.ts
src/stores/: appStore.ts
src/styles/: index.css
src/tauri-adapter/: stats.ts  transactions.ts
(+161 files in other folders)
