[package]
name = "ominiflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = "0.13.4"
calamine = "0.35.0"
csv = "1.4.0"
encoding_rs = "0.8.35"
regex = "1.12.4"
chrono = "0.4.45"
ulid = "1.2.1"
argon2 = "0.5.3"
ring = "0.17.14"
lazy_static = "1.5.0"
log = "0.4.33"
env_logger = "0.11.11"
thiserror = "2.0.18"
tauri-plugin-dialog = "2"
base64ct = "1.8.3"

